# 262a-datacapsule

./: .gitignore  Cargo.toml  Dockerfile  codebook.toml  docker-compose.yml  recipe.json  ros2-dev.Dockerfile
capsulelib/: Cargo.toml  capsule.rs  lib.rs  mod.rs  requests.rs  unchecked.rs
capsulelib/capsule/: structs.rs  utils.rs
capsulelib/tests/: basic.rs  bulk_append.rs  complex.rs  helpers.rs  property_bulk_append.rs  read_signature.rs
client/: Cargo.toml  capsule.rs  lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/bench/: Cargo.toml
examples/bench/src/: bench_batches.rs  bench_batches_payload.rs  main.rs  read_throughput.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/networking_basic/: .gitignore  Cargo.toml
examples/networking_basic/src/: main.rs
examples/test/: Cargo.toml
examples/test/src/: main.rs
proptest-regressions/tests/: property_bulk_append.txt
server/: Cargo.toml  main.rs
server/src/: main.rs
tests/: common.rs
userlib/: lib.rs
