[package]
name = "datacapsule"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "capsulelib",
    "server",
    "userlib",
]

[dependencies]
anyhow = "1.0.100"
crypto = { version = "0.5.1", features = ["signature"] }
fjall = "2.11.2"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "datacapsule_server"
path = "server/main.rs"

[lib]
name = "datacapsule_userlib"   # The name of the target.
path = "userlib/lib.rs"    # The source file of the target.
