[package]
name = "datacapsule"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "capsulelib",
    "server",
    "client",
    "examples/basic",
    "examples/test",
    "examples/demo",
    "examples/bench",
    "examples/networking_basic"
]

[dependencies]
anyhow = "1.0.100"
crypto = { version = "0.5.1", features = ["signature"] }
fjall = "2.11.2"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
r2r = "0.9.5"
serde = "1.0.228"
futures = "0.3.31"
serde_json = "1.0.145"
capsulelib = { package = "datacapsule-capsulelib", path = "capsulelib" }
log = "0.4.29"


[[bin]]
name = "server"
path = "server/src/main.rs"
