[package]
name = "datacapsule-capsulelib"
version = "0.1.0"
edition = "2024"

[lib]
name = "datacapsule_capsulelib"   # The name of the target.
path = "lib.rs"    # The source file of the target.

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
crypto = { version = "0.5.1", features = ["signature"] }
ctr = "0.9.2"
ed25519 = "2.2.3"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
fjall = "2.11.2"
generic-array = { version = "1.3.5", features = ["alloc"] }
log = "0.4.29"
memoize = "0.5.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
