[package]
name = "networking_benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
r2r = "0.9.5"
capsulelib = { package = "datacapsule-capsulelib", path = "../../capsulelib" }
capsuleclient = { package = "datacapsule-userlib", path = "../../client" }
serde_json = "1.0.145"
pretty_env_logger = "0.5.0"
ed25519-dalek = "2.2.0"
log = "0.4.29"
