[package]
name = "networking_benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
r2r = "0.9.5"
capsulelib = { package = "datacapsule-capsulelib", path = "../../capsulelib" }
capsuleclient = { package = "datacapsule-userlib", path = "../../client" }
serde_json = "1.0.145"
pretty_env_logger = "0.5.0"
ed25519-dalek = "2.2.0"
log = "0.4.29"

[[example]]
name = "bench_main"
path = "src/main.rs"

[[example]]
name = "bench_batches"
path = "src/bench_batches.rs"

[[example]]
name = "bench_batches_payload"
path = "src/bench_batches_payload.rs"

[[example]]
name = "read_throughput"
path = "src/read_throughput.rs"
