[package]
name = "datacapsule-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
capsulelib = { package = "datacapsule-capsulelib", path = "../../capsulelib" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex-literal = "1.1.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["os_rng", "std"] }
